influxdb3_catalog/src/snapshots/influxdb3_catalog__catalog__tests__catalog_file_ordering.snap
---
source: influxdb3_catalog/src/catalog.rs
expression: catalog.snapshot()
---
{
  "nodes": [],
  "databases": [
    [
      0,
      {
        "id": 0,
        "name": "test_db",
        "tables": [
          [
            0,
            {
              "table_id": 0,
              "table_name": "test_tbl",
              "key": [
                0
              ],
              "cols": [
                [
                  1,
                  {
                    "name": "f1",
                    "id": 1,
                    "type": "str",
                    "influx_type": "field",
                    "nullable": true
                  }
                ],
                [
                  3,
                  {
                    "name": "f2",
                    "id": 3,
                    "type": "i64",
                    "influx_type": "field",
                    "nullable": true
                  }
                ],
                [
                  0,
                  {
                    "name": "t1",
                    "id": 0,
                    "type": {
                      "dict": [
                        "i32",
                        "str"
                      ]
                    },
                    "influx_type": "tag",
                    "nullable": true
                  }
                ],
                [
                  2,
                  {
                    "name": "time",
                    "id": 2,
                    "type": {
                      "time": [
                        "ns",
                        null
                      ]
                    },
                    "influx_type": "time",
                    "nullable": false
                  }
                ]
              ],
              "last_caches": [],
              "distinct_caches": [],
              "deleted": false,
              "next_column_id": 4
            }
          ]
        ],
        "processing_engine_triggers": [],
        "deleted": false,
        "next_table_id": 1
      }
    ]
  ],
  "sequence": 3,
  "catalog_id": "test",
  "catalog_uuid": "[uuid]",
  "next_db_id": 1
}
