influxdb3_catalog/src/snapshots/influxdb3_catalog__catalog__tests__serialization_format.snap
---
source: influxdb3_catalog/src/catalog.rs
description: Catalog snapshot with deleted objects
expression: snapshot
---
{
  "generation_config": {
    "generation_durations": []
  },
  "nodes": {
    "repo": [],
    "next_id": 0
  },
  "databases": {
    "repo": [],
    "next_id": 0
  },
  "sequence": 0,
  "tokens": {
    "repo": [],
    "next_id": 0
  },
  "catalog_id": "test-catalog",
  "catalog_uuid": "[uuid]"
}
